--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="img/pokemon-ir.png" type="image/x-icon">
@@ -12,25 +13,25 @@
         <nav class="nav">
             <img src="img/logo.png" alt="Logo Pokédex">
             <ul class="nav-list">
-                <li class="nav-item"><button class="btn btn.header" id="ver-todos">Ver Todos</button></li>
-                <li class="nav-item"><button class="btn btn.header normal" id="normal">Normal</button></li>
-                <li class="nav-item"><button class="btn btn.header fire" id="fire">Fire</button></li>
-                <li class="nav-item"><button class="btn btn.header water" id="water">Water</button></li>
-                <li class="nav-item"><button class="btn btn.header grass" id="grass">Grass</button></li>
-                <li class="nav-item"><button class="btn btn.header electric" id="electric">Electric</button></li>
-                <li class="nav-item"><button class="btn btn.header ice" id="ice">Ice</button></li>
-                <li class="nav-item"><button class="btn btn.header fighting" id="fighting">Fighting</button></li>
-                <li class="nav-item"><button class="btn btn.header poison" id="poison">Poison</button></li>
-                <li class="nav-item"><button class="btn btn.header ground" id="ground">Ground</button></li>
-                <li class="nav-item"><button class="btn btn.header flying" id="flying">Flying</button></li>
-                <li class="nav-item"><button class="btn btn.header psychic" id="psychic">Psychic</button></li>
-                <li class="nav-item"><button class="btn btn.header bug" id="bug">Bug</button></li>
-                <li class="nav-item"><button class="btn btn.header rock" id="rock">Rock</button></li>
-                <li class="nav-item"><button class="btn btn.header ghost" id="ghost">Ghost</button></li>
-                <li class="nav-item"><button class="btn btn.header dark" id="dark">Dark</button></li>
-                <li class="nav-item"><button class="btn btn.header dragon" id="dragon">Dragon</button></li>
-                <li class="nav-item"><button class="btn btn.header steel" id="steel">Steel</button></li>
-                <li class="nav-item"><button class="btn btn.header fairy" id="fairy">Fairy</button></li>
+                <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver Todos</button></li>
+                <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
+                <li class="nav-item"><button class="btn btn-header fire" id="fire">Fire</button></li>
+                <li class="nav-item"><button class="btn btn-header water" id="water">Water</button></li>
+                <li class="nav-item"><button class="btn btn-header grass" id="grass">Grass</button></li>
+                <li class="nav-item"><button class="btn btn-header electric" id="electric">Electric</button></li>
+                <li class="nav-item"><button class="btn btn-header ice" id="ice">Ice</button></li>
+                <li class="nav-item"><button class="btn btn-header fighting" id="fighting">Fighting</button></li>
+                <li class="nav-item"><button class="btn btn-header poison" id="poison">Poison</button></li>
+                <li class="nav-item"><button class="btn btn-header ground" id="ground">Ground</button></li>
+                <li class="nav-item"><button class="btn btn-header flying" id="flying">Flying</button></li>
+                <li class="nav-item"><button class="btn btn-header psychic" id="psychic">Psychic</button></li>
+                <li class="nav-item"><button class="btn btn-header bug" id="bug">Bug</button></li>
+                <li class="nav-item"><button class="btn btn-header rock" id="rock">Rock</button></li>
+                <li class="nav-item"><button class="btn btn-header ghost" id="ghost">Ghost</button></li>
+                <li class="nav-item"><button class="btn btn-header dark" id="dark">Dark</button></li>
+                <li class="nav-item"><button class="btn btn-header dragon" id="dragon">Dragon</button></li>
+                <li class="nav-item"><button class="btn btn-header steel" id="steel">Steel</button></li>
+                <li class="nav-item"><button class="btn btn-header fairy" id="fairy">Fairy</button></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +50,7 @@
                         </div>
                         <div class="pokemon-tipos">
                             <p class="electric tipo">ELETRIC</p>
-                            <p class="tipo">ELETRIC</p>
+                            <p class="fighting tipo">FIGHTING</p>
                         </div>
                         <div class="pokemon-stats">
                             <p class="stat">4m</p>
