--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div id="todos">
             <div class="pokemon-todos" id="listaPokemon">
-                <div class="pokemon">
+                <!-- <div class="pokemon">
                     <p class="pokemon-id-back">#025</p>
                     <div class="pokemon-imagen">
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" alt="Pikachu">
@@ -57,7 +57,7 @@
                             <p class="stat">60kg</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
