--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="img/pokemon-ir.png" type="image/x-icon">
     <title>Pokédex</title>
 </head>
 <body>
     <header>
         <nav class="nav">
-            <img src="img/logo.png" alt="Logo Pokédex">
+            <img src="./img/logo.png" alt="Logo Pokédex">
             <ul class="nav-list">
                 <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver Todos</button></li>
                 <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
@@ -61,6 +61,6 @@
             </div>
         </div>
     </main>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
